# big_brother

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md  config.toml  data.db
.github/workflows/: rust.yml
src/: config.rs  data.rs  error.rs  main.rs  scale.rs
