[package]
name = "big-brother"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
phidget = "0.2.0"
serde = {version = "1.0.219", features = ["derive"]}
log = "0.4.27"
rusqlite = "0.36.0"
time = { version = "0.3", features = ["formatting", "local-offset"] }
reqwest = "0.12.20"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.140"
menu = { git = "https://github.com/rileyhernandez/menu.git"}